<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity4">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/scrollViewText1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField2"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField3"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField4"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField5"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <EditText
            android:id="@+id/editTextTextPersonName6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField6"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

        <EditText
            android:id="@+id/editTextTextPersonName7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField7"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/textField8"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/textField9"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

        <EditText
            android:id="@+id/editTextTextPersonName10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/textField10"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName9"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

        <Button
            android:id="@+id/buttonBack3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginBottom="10dp"
            android:onClick="finishActivity4"
            android:text="@string/buttonBack"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
